src/App.css
a {
  text-decoration: none;
  color: inherit;
}
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Roboto', sans-serif;
}

.app {
  height: auto;
  width: 100vw;
  min-width: 320px;
}

.background-container {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  overflow: hidden;
  z-index: -1;
  background-color: #fefefe;
  background-image: url('./images/pexels-adrien-olichon-1257089-3137052.jpg');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: 100% 90%;
}
.background-container::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(255, 255, 255, 0.4); /* Adjust opacity to control lightness */
  z-index: 1;
  pointer-events: none;
}

.individual-item:hover {
  transform: scale(1.025);
  transition: transform 0.5s ease;
  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
}

h1, h2, h3, h4, h5, h6, p, li {
  color: #494949;
}

